[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "image-reconstruction"
version = "0.1.0"
description = "Structure-aware reconstruction of scientific images."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]


[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "jupyterlab>=4.0",
    "ipykernel>=6.0",
]


[tool.setuptools.packages.find]
where = ["."]
include = [
    "grayrecon*",
    "visualization*",
    "evaluation*",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
